First refactoring at StatementPrinter. Java version from 11 to 8