@@ -1,6 +1,8 @@
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
+import java.util.Arrays;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
@@ -10,31 +12,35 @@ public class StatementPrinterTests {
 
     @Test
     void exampleStatement() {
-        Map<String, Play> plays = Map.of(
-                "hamlet",  new Play("Hamlet", "tragedy"),
-                "as-like", new Play("As You Like It", "comedy"),
-                "othello", new Play("Othello", "tragedy"));
+        Map<String, Play> plays = new HashMap<>();
+        plays.put("hamlet",  new Play("Hamlet", "tragedy"));
+        plays.put("as-like", new Play("As You Like It", "comedy"));
+        plays.put("othello", new Play("Othello", "tragedy"));
 
-        Invoice invoice = new Invoice("BigCo", List.of(
-                new Performance("hamlet", 55),
-                new Performance("as-like", 35),
-                new Performance("othello", 40)));
+        Invoice invoice = new Invoice("BigCo", Arrays.asList(
+                new Performance[]{
+                        new Performance("hamlet", 55),
+                        new Performance("as-like", 35),
+                        new Performance("othello", 40)
+                }));
 
         StatementPrinter statementPrinter = new StatementPrinter();
-        var result = statementPrinter.print(invoice, plays);
+        String result = statementPrinter.print(invoice, plays);
 
         verify(result);
     }
 
     @Test
     void statementWithNewPlayTypes() {
-        Map<String, Play> plays = Map.of(
-                "henry-v",  new Play("Henry V", "history"),
-                "as-like", new Play("As You Like It", "pastoral"));
+        Map<String, Play> plays = new HashMap<>();
+        plays.put("henry-v",  new Play("Henry V", "history"));
+        plays.put("as-like", new Play("As You Like It", "pastoral"));
 
-        Invoice invoice = new Invoice("BigCo", List.of(
-                new Performance("henry-v", 53),
-                new Performance("as-like", 55)));
+        Invoice invoice = new Invoice("BigCo", Arrays.asList(
+                new Performance[] {
+                    new Performance("henry-v", 53),
+                    new Performance("as-like", 55)
+                }));
 
         StatementPrinter statementPrinter = new StatementPrinter();
         Assertions.assertThrows(Error.class, () -> {
